[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -72.5
margin_right = 148.5
margin_bottom = 72.5
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 13
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenuButtons"]
margin_top = 18.0
margin_right = 297.0
margin_bottom = 32.0
text = "Master Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="HSlider" parent="MainMenuButtons"]
margin_top = 45.0
margin_right = 297.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="ResumeButton" type="Button" parent="MainMenuButtons"]
margin_top = 74.0
margin_right = 297.0
margin_bottom = 94.0
text = "Resume Game"

[node name="QuitButton" type="Button" parent="MainMenuButtons"]
margin_top = 107.0
margin_right = 297.0
margin_bottom = 127.0
text = "Quit"
[connection signal="value_changed" from="MainMenuButtons/VSlider" to="." method="set_volume"]
[connection signal="pressed" from="MainMenuButtons/ResumeButton" to="." method="close_menu"]
[connection signal="pressed" from="MainMenuButtons/QuitButton" to="." method="exit_game"]
